# AgLink

./: .gitignore  .mcp.json  CLAUDE.md  README.md  opencode.json  pyproject.toml
.agentsync/: AGENTS.md  config.toml  mcp.json
.agentsync/sessions/: 20260707-070819.json
.github/: copilot-instructions.md
aglink/: __init__.py  adapters.py  cli.py  core.py  globalcfg.py  mcpserver.py  store.py  templates.py  tomlw.py
tests/: fake_upstream.py  test_adapters.py  test_gateway.py  test_global_layer.py  test_session.py
