[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aglink"
version = "0.1.0"
description = "One canonical agent workspace, projected into every coding agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
aglink = "aglink.cli:main"

[tool.setuptools]
packages = ["aglink"]